# rust-dameng

./: .gitignore  AGENT.md  Cargo.toml  DESIGN.md  PROJECT.md  README.md  README_CN.md  ROADMAP.md
dameng/: Cargo.toml
dameng-macros/: Cargo.toml
dameng-macros/src/: from_row.rs  lib.rs  query_macros.rs
dameng-protocol/: Cargo.toml
dameng-protocol/src/: error.rs  frame.rs  lib.rs  message.rs
dameng-protocol/src/message/: bind.rs  close.rs  exec.rs  fetch.rs  isolation.rs  lob.rs  lob_bind.rs  login.rs  ready.rs  response.rs  startup.rs  transaction.rs
dameng-types/: Cargo.toml
dameng-types/src/: encoding.rs  lib.rs
dameng/examples/: async_query.rs  basic_query.rs  crud.rs  data_types.rs  debug_bind_query.rs  debug_exec_path.rs  debug_rows.rs  inspect_types.rs  join_queries.rs  parameter_binding.rs  real_param_binding.rs  test_affected_rows.rs  test_both_envs.rs  test_ewp.rs  test_insert_return.rs  test_lob_locator.rs  test_null.rs  test_query.rs  test_qwp.rs  test_txn.rs  test_user.rs
dameng/src/: client.rs  error.rs  lib.rs  row.rs  transaction.rs
dmPython/: ChangeLogs.md  Connection.c  Cursor.c  Environment.c  README.txt  exBfile.c  exObject.c  py_Dameng.c  py_Dameng.h  setup.py  strct.h  trc.c  trc.h  vBfile.c  vCursor.c  vLob.c  var.c  var_pub.h  vlong.c
integration-test/: Cargo.toml
integration-test/src/: main.rs
scripts/: analyze_row_format.rs  debug_dml_affected.rs  debug_protocol.py  debug_raw.rs  debug_raw_tcp.rs  dump_row.py  probe_dm.py  probe_startup.py  proxy.py  proxy_capture.py  test_datetime.py
tokio-dameng/: Cargo.toml
tokio-dameng/examples/: async_query.rs  stress_test.rs
tokio-dameng/src/: client.rs  config.rs  error.rs  lib.rs  pool.rs  query.rs  row.rs
tokio-dameng/src/sqlx/: mod.rs  row_ext.rs
