[package]
name = "dameng-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for tokio-dameng: FromRow derive + query! macros"
license = "MIT"
repository = "https://github.com/rarnu/rust-dameng"
keywords = ["dameng", "database", "macros"]
categories = ["database"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
