[package]
name = "dameng-protocol"
version = "0.1.0"
edition = "2021"
description = "Dameng database wire protocol implementation"
license = "MIT"
repository = "https://github.com/rarnu/rust-dameng"
keywords = ["dameng", "database", "protocol"]
categories = ["database"]
readme = "../README.md"

[dependencies]
bytes = "1"
dameng-types = "0.1.0"

[dev-dependencies]
