[package]
name = "dameng"
version = "0.1.0"
edition = "2021"
description = "Dameng database sync driver"
license = "MIT"

[dependencies]
dameng-protocol = { path = "../dameng-protocol" }
dameng-types = { path = "../dameng-types" }
bytes = "1"
encoding_rs = "0.8"

[dev-dependencies]
tokio-dameng = { path = "../tokio-dameng" }
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
