[package]
name = "tokio-dameng"
version = "0.1.0"
edition = "2021"
description = "Dameng database async driver with tokio"
license = "MIT"

[dependencies]
dameng-protocol = { path = "../dameng-protocol" }
dameng-types = { path = "../dameng-types" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
deadpool-runtime = { version = "0.1", features = ["tokio"] }
