[package]
name = "tokio-dameng"
version = "0.1.0"
edition = "2021"
description = "Dameng database async driver with tokio"
license = "MIT"
repository = "https://github.com/rarnu/rust-dameng"
keywords = ["dameng", "database", "tokio", "async"]
categories = ["database"]
readme = "../README.md"

[dependencies]
dameng-protocol = { version = "0.1.0", path = "../dameng-protocol" }
dameng-types = { version = "0.1.0", path = "../dameng-types" }
rust_decimal = "1"
chrono = "0.4"
dameng-macros = { version = "0.1.0", path = "../dameng-macros" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
log = "0.4"
encoding_rs = "0.8"
